# VocabTrainer

./: .buildconfig  README.md  meson.build  org.gnome.Vocabtrainer.json  org.gnome.Vocabtrainer.json~
data/: fi-de.vocab  meson.build  org.gnome.Vocabtrainer.appdata.xml.in  org.gnome.Vocabtrainer.desktop.in  org.gnome.Vocabtrainer.gschema.xml
po/: POTFILES  meson.build
src/: filehandler.vala  main.vala  meson.build  vocabtrainer.gresource.xml  vocabulary.vala  window.ui  window.vala
